--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -168,10 +168,9 @@
   }
 
   /* Section Aside Spacing --------- */
-  .section-aside {
-    padding: 3.2rem 1.6rem;
-    border: solid 1px var(--color-gray-light);
-    border-radius: 1.6rem;
+  .aside__box {
+    border: solid 0.1rem var(--color-secondary);
+    border-radius: var(--rad-img);
   }
 
   /* Navbar Spacing */
