--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -359,20 +359,24 @@
 }
 
 /* Saved For Later ----------------------------*/
-#savedForLater .section__title {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-savedForLater {
+.savedForLater__item {
   min-height: 55rem;
   border-radius: var(--rad-img);
+  overflow: hidden;
+  position: relative;
 }
 
-.card-savedForLater-text {
-  padding: 2.4rem;
-  justify-content: space-between;
+.savedForLater__bg {
+  position: absolute;
+  content: "";
+  width: 100%;
   height: 100%;
+  z-index: -1;
+}
+
+.savedForLater__content {
+  height: 100%;
+  padding: 3.2rem;
 }
 
 /* Video ------------------------------- */
