--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -472,21 +472,23 @@
 }
 
 .video__play-outline {
-  width: 4.8rem;
-  height: 4.8rem;
+  width: 5.6rem;
+  height: 5.6rem;
   border-radius: 50%;
-  outline: solid 0.5rem var(--color-secondary);
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var;
-  background-color: var(--color-secondary);
-  color: var(--color-white);
+  background-color: var(--color-white);
+  color: var(--color-secondary);
+  opacity: 0.5;
+  transition: all 0.1s ease;
 }
 
 .video__play-outline:hover {
   cursor: pointer;
-  filter: brightness(1.15);
+  background-color: var(--color-secondary);
+  color: var(--color-white);
+  opacity: 1;
 }
 
 .video__float-wrapper {
