--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -153,7 +153,15 @@
   column-gap: 14.4rem;
 }
 
-.topics__item-wrapper {
+.topTopics__list .topics__name {
+  transition: all 0.1s ease;
+}
+
+.topTopics__list .topics__name:hover {
+  box-shadow: inset 0 -3rem 0 var(--color-primary);
+}
+
+.topTopics__list .topics__item-wrapper {
   display: flex;
 }
 
