data binidng - trending list

--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -313,8 +313,9 @@
   border-bottom: none;
 }
 
-.title-row__img {
-  width: 30rem;
+.title-row {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
 }
 
 /* Stay Connected ----------------------------- */
