--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -468,14 +468,12 @@
 .video__bg {
   min-height: 85rem;
   border-radius: var(--rad-img);
-
   justify-content: center;
   align-items: center;
 }
 
 .video__content {
   max-width: 75rem;
-
   justify-content: center;
   align-items: center;
 }
@@ -483,7 +481,7 @@
 .video__item {
   padding-right: 1.6rem;
   border-right: solid 1px var(--color-secondary-light);
-  flex-grow: 1;
+  width: 25%;
 }
 
 .video__item:last-child {
@@ -523,12 +521,16 @@
   transform: translate(-50%, -50%);
 }
 
-.video__play-icon {
-  transform: translate(10%, 0);
-}
-
 .video__txt-wrapper {
   width: 60%;
+}
+
+.video__txt {
+  text-transform: capitalize;
+}
+
+.video__play-icon {
+  transform: translate(10%, 0);
 }
 
 /* Footer --------------------- */
