--- a/assets/css/reusable-utils.css
+++ b/assets/css/reusable-utils.css
@@ -359,3 +359,26 @@
 .logo--white {
   filter: brightness(0) invert(1);
 }
+
+/* Ovelay */
+.modal__overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.333);
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 99;
+  display: none;
+}
+
+.modal__video {
+  position: absolute;
+  border-radius: 1.6rem;
+  max-width: 80vw;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  display: none;
+}
