--- a/assets/css/reusable-utils.css
+++ b/assets/css/reusable-utils.css
@@ -23,6 +23,10 @@
   color: var(--color-gray);
 }
 
+.tc--gray-dark {
+  color: var(--color-gray-dark);
+}
+
 .uppercase {
   text-transform: uppercase;
 }
