--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -10,7 +10,7 @@
   --color-primary-lightest: #f0f5e0;
   --color-primary-filter: #606d2b93;
 
-  --color-secondary-light: #c6cff0;
+  --color-secondary-light: #dfe3f3;
   --color-secondary: #1743d1;
   --color-secondary-dark: #28396e;
 
