--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -347,16 +347,26 @@
 
 .navbar__wrapper {
   position: fixed;
-  z-index: 10;
+  z-index: 20;
   height: 6.4rem;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  align-items: center;
+  align-items: flex-end;
 
   display: grid;
   grid-template-columns: 2fr 9fr 1fr;
-  align-items: flex-end;
+  padding-bottom: 1.6rem;
+}
+
+.navbar__wrapper--white {
+  background-color: #ffffffcb;
+  border-bottom: solid 1px var(--color-secondary-light);
+  backdrop-filter: saturate(1.8) blur(5px);
+}
+
+.navbar__wrapper--transparent {
+  background: transparent;
 }
 
 .navbar__logo {
@@ -365,14 +375,18 @@
 
 .menu__item {
   letter-spacing: 0.5px;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
   padding-bottom: 0;
   position: relative;
-  color: #fff;
+  color: var(--color-secondary);
 
   opacity: 0.8;
   transition: opacity 0.15s ease;
+}
+
+.menu__item--transparent {
+  color: var(--color-white);
 }
 
 .menu__item:hover {
@@ -381,15 +395,19 @@
 
 .menu__item::after {
   position: absolute;
-  z-index: 20;
+  z-index: 30;
   content: "";
   width: 100%;
   height: 100%;
   bottom: -16%;
   left: 50%;
   transform: translateX(-50%);
-  border-bottom: solid 2px #fff;
+  border-bottom: solid 2px var(--color-secondary);
   opacity: 0;
+}
+
+.menu__item--transparent::after {
+  border-bottom: solid 2px var(--color-white);
 }
 
 .menu__item:hover::after {
