--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -357,11 +357,13 @@
   display: grid;
   grid-template-columns: 2fr 9fr 1fr;
   padding-bottom: 1.6rem;
+
+  transition: background-color 0.15s ease, box-shadow 0.15s ease;
 }
 
 .navbar__wrapper--white {
   background-color: #ffffffcb;
-  border-bottom: solid 1px var(--color-secondary-light);
+  box-shadow: 0px 1px 0 var(--color-secondary-light);
   backdrop-filter: saturate(1.8) blur(5px);
 }
 
@@ -371,6 +373,8 @@
 
 .navbar__logo {
   cursor: pointer;
+
+  transition: filter 0.15s ease;
 }
 
 .menu__item {
@@ -382,11 +386,15 @@
   color: var(--color-secondary);
 
   opacity: 0.8;
-  transition: opacity 0.15s ease;
+  transition: opacity 0.15s ease, color 0.15s ease;
 }
 
 .menu__item--transparent {
   color: var(--color-white);
+}
+
+.menu__item--current {
+  box-shadow: inset 0 -1.2rem 0 var(--color-primary);
 }
 
 .menu__item:hover {
@@ -420,11 +428,12 @@
 }
 
 .personal__item {
+  color: var(--color-secondary);
   font: inherit;
 }
 
 .personal__item.btn--circle-l {
-  outline: none;
+  border: none;
 }
 
 /* Highlight -------------------------- */
